--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ avatar: https://avatars1.githubusercontent.com/u/5167332?v=3&s=460
 footer-links:
   dribbble: 
   email: 
-  facebook: 
+  facebook: https://www.facebook.com/groups/manjarobrasil/
   flickr: 
   github: manjaro-br
   instagram: 
   linkedin: 
   pinterest: 
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
+  rss: http://manjaro-br.github.io/feed.xml
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
