correção link do facebook.
Signed-off-by: Rafael Neri <rafepel@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://avatars1.githubusercontent.com/u/5167332?v=3&s=460
 footer-links:
   dribbble: 
   email: 
-  facebook: https://www.facebook.com/groups/manjarobrasil/
+  facebook: groups/manjarobrasil/
   flickr: 
   github: manjaro-br
   instagram: 
