--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Manjaro Brasil
 description: Desfrute da simplicidade
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/5167332?v=3&s=460
+avatar: /images/manjaro.png
 
 #
 # Flags below are optional
